0.67.3
------
1. Fix crash in system settings when changing colours.
2. Yet another attempt to better align button text with Gtk2.
3. Fix plastik style mouse over on scrollbars.
4. Draw arrows in popupmenus closer to edge - matches Gtk2 better.

0.67.2
------
1. Fix titlebar gradients when inactive!=active
2. Fix garbage on window decoration under KDE4.3 when not compositing

0.67.1
------
1. Adjust Agua overlay if widget is not max rounded.
2. Fix rounding of scrollbar groove.
3. Use icon metrics for all 'AutoDefault' buttons. This should now better match Gtk2
   - where 'can default' buttons always seem to reserve enough height for an icon.
4. If linked against KDE, use KDE4's icon size settings to control the size of icons
   in menus, buttons, and toolbars.

0.67.0
------
 1. Add option to draw insider border of inactive tabs.
 2. Add option to draw double arrows for Gtk style combos.
 3. Add option to colour the sorted listview header.
 4. Disable spin button when at min/max - matches Gtk2.
 5. Disable scrollbar buttons when at min/max - to match spin buttons.
 6. Place non-V arrows of unified spin widgets closer together.
 7. For scrollviews that are windows, dont round and always place scrollbar within
    frame.
 8. Improve appearance of max rounded pushbuttons in Arora.
 9. Increase the amount of rounding when round set to max.
10. Only selected tabs need to fade to 100% alpha when using gradient backgrounds.

0.66.1
------
1. Fix some issues with the config dialog.
2. Improve text alignment in QFormLayouts by copying the polish code from
   Skulpture.
3. Allow scrollbars to be extra rounded!

0.66.0
------
 1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
    for menu stripes.
 2. New 'Agua' style gradient - looks better under KDE4 and Gtk2.
 3. Add option to lighten/darken the background of tabs.
 4. Make inactive tabs more consistent with active tabs.